--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         width="200"
         class="rounded-circle img-thumbnail"
       />
-      <h1 class="display-4">Hello, world!</h1>
+      <h1 class="display-4">Dova Arya</h1>
       <p class="lead">
         This is a simple hero unit, a simple jumbotron-style component for
         calling extra attention to featured content or information.
